# ai

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLI.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.githooks/: pre-push
.github/workflows/: release.yml  sync-mcp-config.yml.example  sync-vercel-skills.yml  test.yml  vscode-extension.yml
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs  ui.rs
cli/src/commands/: auto_sync.rs  deploy.rs  doctor.rs  install.rs  interactive.rs  mod.rs  profile.rs  skill.rs  status.rs  sync_mcp.rs  uninstall.rs  update.rs  version.rs
core/: Cargo.toml  README.md
core/src/: deploy.rs  diagnostics.rs  error.rs  fs_utils.rs  git.rs  installer.rs  instructions.rs  lib.rs  manifest.rs  mcp_config.rs  mcp_sync.rs  output_styles.rs  paths.rs  profiles.rs  project.rs  settings.rs  skills.rs  test_utils.rs  updater.rs  version.rs
core/src/targets/: claude_code.rs  deploy_target.rs  generic.rs  mod.rs  target_paths.rs  traits.rs
core/tests/: integration_skills_sh.rs  integration_targets.rs
docs/: INSTALLATION.md  MCP_CENTRALIZED_CONFIG.md  MCP_INTEGRATION.md  MULTI_OS_SUPPORT.md  RAG_MCP_ARCHITECTURE.md  RELEASE-GUIDE.md  SECURITY_POLICY.md  SKILL_GUIDELINES.md  WSL_INSTALLATION.md
gui/: README.md  index.html  package.json  pnpm-lock.yaml
gui/src/: App.tsx  api.ts  styles.css  types.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: commands.rs  lib.rs  main.rs
gui/src-tauri/tests/: command_integration.rs  contract_validation.rs
gui/src/pages/: Dashboard.tsx  Diagnostics.tsx  Instructions.tsx  Mcp.tsx  NotFound.tsx  OutputStyle.tsx  Profiles.tsx  Release.tsx  Settings.tsx  Skills.tsx
gui/tests/e2e/: 02-skills.spec.ts  05-output-style.spec.ts  07-instructions.spec.ts  08-profiles.spec.ts
gui/tests/e2e/mocks/: tauri-mock.js
plugin/vscode/: package-lock.json  package.json  tsconfig.json
plugin/vscode/src/: extension.ts
plugin/vscode/src/cli/: runner.ts  types.ts
plugin/vscode/src/providers/: AvailableTreeProvider.ts  DiagnosticsTreeProvider.ts  InstalledTreeProvider.ts
plugin/vscode/src/startup/: syncOnOpen.ts  updateCheck.ts
plugin/vscode/src/statusbar/: ProfileStatus.ts
plugin/vscode/src/watchers/: ProfileWatcher.ts
plugin/vscode/src/workspace/: monorepo.test.ts  monorepo.ts
rhinolabs-claude/: .gitignore  .mcp.json  .skills-config.json  CLAUDE.md  README.md  profiles.json  settings.json  statusline.sh
rhinolabs-claude/.claude-plugin/: plugin.json
rhinolabs-claude/docs/: SKILL_GUIDELINES.md
rhinolabs-claude/output-styles/: rhinolabs.md
rhinolabs-claude/scripts/: README.md  clean-install.ps1  clean-install.sh  install.ps1  install.sh  sync-mcp-config.sh
rhinolabs-claude/skills/ai-sdk-core/: SKILL.md
rhinolabs-claude/skills/ai-sdk-react/: SKILL.md
rhinolabs-claude/skills/nextjs-integration/: SKILL.md
rhinolabs-claude/skills/playwright/: SKILL.md
rhinolabs-claude/skills/react-patterns/: SKILL.md
rhinolabs-claude/skills/rhinolabs-architecture/: SKILL.md
rhinolabs-claude/skills/rhinolabs-security/: SKILL.md
rhinolabs-claude/skills/rhinolabs-standards/: SKILL.md
rhinolabs-claude/skills/skill-creator/: SKILL.md
rhinolabs-claude/skills/tailwind-4/: SKILL.md
rhinolabs-claude/skills/team-bug-investigation/: SKILL.md
rhinolabs-claude/skills/team-code-review/: SKILL.md
rhinolabs-claude/skills/testing-strategies/: SKILL.md
rhinolabs-claude/skills/typescript-best-practices/: SKILL.md
rhinolabs-claude/skills/zod-4/: SKILL.md
rhinolabs-claude/skills/zustand-5/: SKILL.md
rhinolabs-opencode/: README.md
web/: CLAUDE.md  package.json  tsconfig.tsbuildinfo
web/.claude-plugin/: plugin.json
web/.claude/skills/: .gitignore
web/.github/: copilot-instructions.md
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/diagnostics/: page.tsx
web/src/app/login/: page.tsx
web/src/app/mcp/: page.tsx
web/src/app/profiles/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/skills/: page.tsx
web/src/app/team/: page.tsx
web/src/components/layout/: Sidebar.tsx
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Spinner.tsx  StatusBadge.tsx  SummaryBox.tsx  Tabs.tsx
web/src/lib/: api.ts  mock-api.ts  mock-data.ts
web/src/types/: index.ts
