[package]
name = "rhinolabs-ai-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# Main binary
[[bin]]
name = "rhinolabs-ai"
path = "src/main.rs"

# Short alias binary (uses src/bin/rlai.rs automatically)

[lib]
name = "rhinolabs_ai_cli"
path = "src/lib.rs"

[dependencies]
rhinolabs-core = { path = "../core" }
anyhow.workspace = true
tokio.workspace = true

# CLI-specific dependencies
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
