[package]
name = "rhinolabs-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
dirs.workspace = true
which.workspace = true

# Core-specific dependencies
git2 = { version = "0.18", features = ["vendored-openssl"] }
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
semver = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tempfile = "3.9"
serde_yaml = "0.9"

# RAG/R2 dependencies
aws-sigv4 = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
http = "1"
base64 = "0.22"
hmac = "0.12"
walkdir = "2"
quick-xml = { version = "0.31", features = ["serialize"] }

[target.'cfg(windows)'.dependencies]
junction = "1"

[dev-dependencies]
wiremock = "0.6"
