[package]
name = "rhinolabs-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rhinolabs_gui"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
rhinolabs-core = { path = "../../core" }
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true

tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"

[dev-dependencies]
tempfile = "3.9"
chrono = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
